--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -82,7 +82,7 @@
 
 
 
-<VirtualHost _IP_:80>
+<VirtualHost 192.81.134.193:80>
 	ServerName i._DOMAIN_
 	DocumentRoot /home/i.crunchbutton/www
 	ServerAdmin webmaster@i._DOMAIN_
@@ -98,7 +98,7 @@
 	</IfModule>
 </VirtualHost>
 
-<VirtualHost _IP_:443>
+<VirtualHost 192.81.134.193:443>
 	ServerName i._DOMAIN_
 	DocumentRoot /home/i.crunchbutton/www
 	ServerAdmin webmaster@i._DOMAIN_
