removed image servers dedicated ip

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -1,3 +1,17 @@
+# ips:
+# _IP_	_DOMAIN_
+# 66.175.217.154	cockpit._DOMAIN_
+# 66.175.217.154	spicywithdelivery.com
+# 66.175.217.154	cbtn.io
+# _IP_	i._DOMAIN_
+# 192.81.134.193	(REMOVED) i._DOMAIN_
+
+
+
+#
+# default hosts for the ips
+#
+
 <VirtualHost _IP_:80 [2600:3c01::f03c:91ff:feae:9cf7]:80>
 	ServerName _DOMAIN_
 	DocumentRoot /home/crunchbutton/www
@@ -16,7 +30,6 @@
 
 <VirtualHost _IP_:443 [2600:3c01::f03c:91ff:feae:9cf7]:443>
 	ServerName _DOMAIN_
-	ServerAlias *._DOMAIN_
 	DocumentRoot /home/crunchbutton/www
 	ServerAdmin webmaster@_DOMAIN_
 	UseCanonicalName Off
@@ -31,17 +44,12 @@
 	SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
 </VirtualHost>
 
-<VirtualHost _IP_:80>
-	ServerName jobs._DOMAIN_
-	DocumentRoot /home/jobs.crunchbutton/www
-	ServerAdmin webmaster@jobs._DOMAIN_
-	UseCanonicalName Off
-	ErrorLog /home/jobs.crunchbutton/logs/error_log
-	CustomLog /home/jobs.crunchbutton/logs/access_log combined
-</VirtualHost>
 
 
 
+#
+# old cockpit
+#
 
 <VirtualHost 66.175.217.154:80>
 	ServerName cockpit._DOMAIN_
@@ -78,11 +86,11 @@
 </VirtualHost>
 
 
+#
+# image server
+#
 
-
-
-
-<VirtualHost 192.81.134.193:80>
+<VirtualHost _IP_:80 192.81.134.193:80>
 	ServerName i._DOMAIN_
 	DocumentRoot /home/i.crunchbutton/www
 	ServerAdmin webmaster@i._DOMAIN_
@@ -98,7 +106,7 @@
 	</IfModule>
 </VirtualHost>
 
-<VirtualHost 192.81.134.193:443>
+<VirtualHost _IP_:443 192.81.134.193:443>
 	ServerName i._DOMAIN_
 	DocumentRoot /home/i.crunchbutton/www
 	ServerAdmin webmaster@i._DOMAIN_
@@ -114,83 +122,12 @@
 	SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
 </VirtualHost>
 
-<VirtualHost _IP_:80>
-	ServerName drop.crunchr.co
-	ServerAlias drop._DOMAIN_
-	DocumentRoot /home/drop.crunchbutton/www
-	ServerAdmin webmaster@drop.crunchr.co
-	UseCanonicalName Off
-	ErrorLog /home/drop.crunchbutton/logs/error_log
-	CustomLog /home/drop.crunchbutton/logs/access_log combined
-</VirtualHost>
 
-<VirtualHost _IP_:80>
-	ServerName beta.crunchr.co
-	ServerAlias *.beta.crunchr.co
-	DocumentRoot /home/beta.crunchbutton/www
-	ServerAdmin webmaster@beta.crunchr.co
-	UseCanonicalName Off
-	ErrorLog /home/beta.crunchbutton/logs/error_log
-	CustomLog /home/beta.crunchbutton/logs/access_log combined
-</VirtualHost>
 
-<VirtualHost _IP_:80>
-	ServerName dev.crunchr.co
-	ServerAlias *.dev.crunchr.co
-	DocumentRoot /home/dev.crunchbutton/www
-	ServerAdmin webmaster@dev.crunchr.co
-	UseCanonicalName Off
-	ErrorLog /home/dev.crunchbutton/logs/error_log
-	CustomLog /home/dev.crunchbutton/logs/access_log combined
-</VirtualHost>
 
-<VirtualHost _IP_:80>
-	ServerName obw.crunchr.co
-	ServerAlias obw.crunchr.co obw._DOMAIN_
-	DocumentRoot /home/obw.crunchbutton/www
-	ServerAdmin webmaster@obw.crunchr.co
-	UseCanonicalName Off
-	ErrorLog /home/obw.crunchbutton/logs/error_log
-	CustomLog /home/obw.crunchbutton/logs/access_log combined
-</VirtualHost>
-
-<VirtualHost _IP_:80>
-	ServerName staging.crunchr.co
-	ServerAlias *.staging.crunchr.co
-	DocumentRoot /home/staging.crunchbutton/www
-	ServerAdmin webmaster@staging._DOMAIN_
-	UseCanonicalName Off
-	ErrorLog /home/staging.crunchbutton/logs/error_log
-	CustomLog /home/staging.crunchbutton/logs/access_log combined
-</VirtualHost>
-
-<VirtualHost _IP_:80>
-	ServerName onebuttonwenzel.com
-	ServerAlias *.onebuttonwenzel.com 1buttonwenzel.com *.1buttonwenzel.com wnzl.me *.wnzl.me wenzl.me *.wenzl.me wenzeled.com *.wenzeled.com onebuttonwenzels.com *.onebuttonwenzels.com onebuttonwenzel.com *.onebuttonwenzel.com
-	DocumentRoot /home/wenzel/www
-	ServerAdmin webmaster@onebuttonwenzel.com
-	UseCanonicalName Off
-	ErrorLog /home/wenzel/logs/error_log
-	CustomLog /home/wenzel/logs/access_log combined
-</VirtualHost>
-
-<VirtualHost 66.175.217.154:80>
-	ServerName dev.spicywithdelivery.com
-	DocumentRoot /home/dev.crunchbutton/www
-	ServerAdmin webmaster@dev.spicywithdelivery.com
-	UseCanonicalName Off
-	ErrorLog /home/dev.crunchbutton/logs/error_log
-	CustomLog /home/dev.crunchbutton/logs/access_log combined
-</VirtualHost>
-
-<VirtualHost 66.175.217.154:80>
-	ServerName beta.spicywithdelivery.com
-	DocumentRoot /home/beta.crunchbutton/www
-	ServerAdmin webmaster@beta.spicywithdelivery.com
-	UseCanonicalName Off
-	ErrorLog /home/beta.crunchbutton/logs/error_log
-	CustomLog /home/beta.crunchbutton/logs/access_log combined
-</VirtualHost>
+#
+# cbtn.io
+#
 
 <VirtualHost 66.175.217.154:80>
 	ServerName cbtn.io
@@ -227,12 +164,140 @@
 </VirtualHost>
 
 
+
+
+#
+# microsites
+#
+
 <VirtualHost _IP_:80>
-	ServerName crunchr.co
-	ServerAlias *.crunchr.co *._DOMAIN_
+	ServerName jobs._DOMAIN_
+	DocumentRoot /home/jobs.crunchbutton/www
+	ServerAdmin webmaster@jobs._DOMAIN_
+	UseCanonicalName Off
+	ErrorLog /home/jobs.crunchbutton/logs/error_log
+	CustomLog /home/jobs.crunchbutton/logs/access_log combined
+</VirtualHost>
+
+<VirtualHost _IP_:80>
+	ServerName drop.crunchr.co
+	ServerAlias drop._DOMAIN_
+	DocumentRoot /home/drop.crunchbutton/www
+	ServerAdmin webmaster@drop.crunchr.co
+	UseCanonicalName Off
+	ErrorLog /home/drop.crunchbutton/logs/error_log
+	CustomLog /home/drop.crunchbutton/logs/access_log combined
+</VirtualHost>
+
+
+
+#
+# dev environments
+#
+
+<VirtualHost _IP_:80>
+	ServerName beta.crunchr.co
+	ServerAlias *.beta.crunchr.co
+	DocumentRoot /home/beta.crunchbutton/www
+	ServerAdmin webmaster@beta.crunchr.co
+	UseCanonicalName Off
+	ErrorLog /home/beta.crunchbutton/logs/error_log
+	CustomLog /home/beta.crunchbutton/logs/access_log combined
+</VirtualHost>
+
+<VirtualHost _IP_:80>
+	ServerName dev.crunchr.co
+	ServerAlias *.dev.crunchr.co
+	DocumentRoot /home/dev.crunchbutton/www
+	ServerAdmin webmaster@dev.crunchr.co
+	UseCanonicalName Off
+	ErrorLog /home/dev.crunchbutton/logs/error_log
+	CustomLog /home/dev.crunchbutton/logs/access_log combined
+</VirtualHost>
+
+<VirtualHost _IP_:80>
+	ServerName staging.crunchr.co
+	ServerAlias *.staging.crunchr.co
+	DocumentRoot /home/staging.crunchbutton/www
+	ServerAdmin webmaster@staging._DOMAIN_
+	UseCanonicalName Off
+	ErrorLog /home/staging.crunchbutton/logs/error_log
+	CustomLog /home/staging.crunchbutton/logs/access_log combined
+</VirtualHost>
+
+
+#
+# one button wenzel specific stuff
+# @todo: remove this stuff
+#
+
+<VirtualHost _IP_:80>
+	ServerName obw.crunchr.co
+	ServerAlias obw.crunchr.co obw._DOMAIN_
+	DocumentRoot /home/obw.crunchbutton/www
+	ServerAdmin webmaster@obw.crunchr.co
+	UseCanonicalName Off
+	ErrorLog /home/obw.crunchbutton/logs/error_log
+	CustomLog /home/obw.crunchbutton/logs/access_log combined
+</VirtualHost>
+
+<VirtualHost _IP_:80>
+	ServerName onebuttonwenzel.com
+	ServerAlias *.onebuttonwenzel.com 1buttonwenzel.com *.1buttonwenzel.com wnzl.me *.wnzl.me wenzl.me *.wenzl.me wenzeled.com *.wenzeled.com onebuttonwenzels.com *.onebuttonwenzels.com onebuttonwenzel.com *.onebuttonwenzel.com
+	DocumentRoot /home/wenzel/www
+	ServerAdmin webmaster@onebuttonwenzel.com
+	UseCanonicalName Off
+	ErrorLog /home/wenzel/logs/error_log
+	CustomLog /home/wenzel/logs/access_log combined
+</VirtualHost>
+
+<VirtualHost 66.175.217.154:80>
+	ServerName dev.spicywithdelivery.com
+	DocumentRoot /home/dev.crunchbutton/www
+	ServerAdmin webmaster@dev.spicywithdelivery.com
+	UseCanonicalName Off
+	ErrorLog /home/dev.crunchbutton/logs/error_log
+	CustomLog /home/dev.crunchbutton/logs/access_log combined
+</VirtualHost>
+
+<VirtualHost 66.175.217.154:80>
+	ServerName beta.spicywithdelivery.com
+	DocumentRoot /home/beta.crunchbutton/www
+	ServerAdmin webmaster@beta.spicywithdelivery.com
+	UseCanonicalName Off
+	ErrorLog /home/beta.crunchbutton/logs/error_log
+	CustomLog /home/beta.crunchbutton/logs/access_log combined
+</VirtualHost>
+
+
+
+#
+# any host that doesnt match goes to main site
+#
+
+<VirtualHost _IP_:80>
+	ServerName www._DOMAIN_
+	ServerAlias crunchr.co *.crunchr.co *._DOMAIN_
 	DocumentRoot /home/crunchbutton/www
 	ServerAdmin webmaster@_DOMAIN_
 	UseCanonicalName Off
 	ErrorLog /home/crunchbutton/logs/error_log
 	CustomLog /home/crunchbutton/logs/access_log combined
+</VirtualHost>
+
+<VirtualHost _IP_:443>
+	ServerName www._DOMAIN_
+	ServerAlias *._DOMAIN_
+	DocumentRoot /home/crunchbutton/www
+	ServerAdmin webmaster@_DOMAIN_
+	UseCanonicalName Off
+	ErrorLog /home/crunchbutton/logs/error_log
+	CustomLog /home/crunchbutton/logs/access_log combined
+	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+
+	SSLEngine on
+	SSLCertificateFile /home/server/ssl/wild.sha-2._DOMAIN_.crt
+	SSLCertificateKeyFile /home/server/ssl/wild.sha-2._DOMAIN_.key.private
+	SSLCACertificateFile /home/server/ssl/wild.sha-2._DOMAIN_.cabundle
+	SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
 </VirtualHost>
