--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -90,7 +90,7 @@
 # image server
 #
 
-<VirtualHost _IP_:80 192.81.134.193:80>
+<VirtualHost _IP_:80>
 	ServerName i._DOMAIN_
 	DocumentRoot /home/i.crunchbutton/www
 	ServerAdmin webmaster@i._DOMAIN_
@@ -106,7 +106,7 @@
 	</IfModule>
 </VirtualHost>
 
-<VirtualHost _IP_:443 192.81.134.193:443>
+<VirtualHost _IP_:443>
 	ServerName i._DOMAIN_
 	DocumentRoot /home/i.crunchbutton/www
 	ServerAdmin webmaster@i._DOMAIN_
