added chat proxy

--- a/conf/cockpit.conf
+++ b/conf/cockpit.conf
@@ -64,6 +64,33 @@
 </VirtualHost>
 
 
+<VirtualHost _IP_:443>
+	ServerName chat.cockpit.la
+	ServerAdmin webmaster@chat.cockpit.la
+	
+	ErrorLog /home/cockpit.la/logs/error_log
+	CustomLog /home/cockpit.la/logs/access_log combined
+
+	ProxyRequests off
+ 
+	<Proxy *>
+		Order deny,allow
+		Allow from all
+	</Proxy>
+
+	<Location />
+		ProxyPass http://localhost:9000/
+		ProxyPassReverse http://localhost:9000/
+	</Location>
+	
+	SSLEngine on
+	SSLCertificateFile /home/server/ssl/wild.sha-2.cockpit.la.crt
+	SSLCertificateKeyFile /home/server/ssl/wild.sha-2.cockpit.la.key.private
+	SSLCACertificateFile /home/server/ssl/wild.sha-2._DOMAIN_.cabundle
+	SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
+</VirtualHost>
+
+
 
 <VirtualHost _IP_:80>
 	ServerName http.cockpit.la
@@ -98,4 +125,3 @@
 	SSLCACertificateFile /home/server/ssl/wild.sha-2._DOMAIN_.cabundle
 	SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
 </VirtualHost>
-
