--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_script:
   - cat travis/sites.conf | sed -e "s,PATH,`pwd`/www,g" | sudo tee /etc/apache2/sites-available/default > /dev/null
   - echo 'export APACHE_ARGUMENTS="-D TRAVIS"' | sudo tee -a /etc/apache2/envvars > /dev/null
   - sudo service apache2 restart
+  - php travis/dbmigrate.php
   
 #  - "export DISPLAY=:99.0"
 #  - "sh -e /etc/init.d/xvfb start"
