--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -6,13 +6,13 @@
 # _IP_	i._DOMAIN_
 # 192.81.134.193	(REMOVED) i._DOMAIN_
 
-
+# [2600:3c01::f03c:91ff:feae:9cf7]:443
 
 #
 # default hosts for the ips
 #
 
-<VirtualHost _IP_:80 [2600:3c01::f03c:91ff:feae:9cf7]:80>
+<VirtualHost _IP_:80>
 	ServerName _DOMAIN_
 	DocumentRoot /home/crunchbutton/www
 	ServerAdmin webmaster@_DOMAIN_
@@ -28,7 +28,7 @@
 	</IfModule>
 </VirtualHost>
 
-<VirtualHost _IP_:443 [2600:3c01::f03c:91ff:feae:9cf7]:443>
+<VirtualHost _IP_:443>
 	ServerName _DOMAIN_
 	DocumentRoot /home/crunchbutton/www
 	ServerAdmin webmaster@_DOMAIN_
