--- a/conf/crunchbutton.com.conf
+++ b/conf/crunchbutton.com.conf
@@ -2,7 +2,7 @@
 
 <VirtualHost *:80>
 	ServerName _DOMAIN_
-	DocumentRoot /home/crunchbutton/www
+	DocumentRoot /home/_DOMAIN_/www
 	ServerAdmin webmaster@_DOMAIN_
 	UseCanonicalName Off
 	ErrorLog /home/crunchbutton/logs/error_log
@@ -18,7 +18,7 @@
 
 <VirtualHost *:443>
 	ServerName _DOMAIN_
-	DocumentRoot /home/crunchbutton/www
+	DocumentRoot /home/_DOMAIN_/www
 	ServerAdmin webmaster@_DOMAIN_
 	UseCanonicalName Off
 	ErrorLog /home/crunchbutton/logs/error_log
