--- a/conf/crunchbutton.com.conf
+++ b/conf/crunchbutton.com.conf
@@ -26,9 +26,8 @@
 	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
 
 	SSLEngine on
-	SSLCertificateFile /home/server/ssl/sha-2._DOMAIN_.crt
-	SSLCertificateKeyFile /home/server/ssl/_DOMAIN_.key
-	SSLCACertificateFile /home/server/ssl/sha-2._DOMAIN_.cabundle
+	SSLCertificateFile /home/server/ssl/wild.sha-2._DOMAIN_.crt
+	SSLCertificateKeyFile /home/server/ssl/wild.sha-2._DOMAIN_.key.private
+	SSLCACertificateFile /home/server/ssl/wild.sha-2._DOMAIN_.cabundle
 	SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
 </VirtualHost>
-
