fixed host issue

--- a/conf/crunchbutton.com.conf
+++ b/conf/crunchbutton.com.conf
@@ -2,6 +2,7 @@
 
 <VirtualHost *:80>
 	ServerName _DOMAIN_
+	ServerAlias *._DOMAIN_
 	DocumentRoot /home/_DOMAIN_/www
 	ServerAdmin webmaster@_DOMAIN_
 	UseCanonicalName Off
@@ -18,6 +19,7 @@
 
 <VirtualHost *:443>
 	ServerName _DOMAIN_
+	ServerAlias *._DOMAIN_
 	DocumentRoot /home/_DOMAIN_/www
 	ServerAdmin webmaster@_DOMAIN_
 	UseCanonicalName Off
