added new staging environment

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -225,6 +225,16 @@
 	CustomLog /home/staging.crunchbutton/logs/access_log combined
 </VirtualHost>
 
+<VirtualHost _IP_:80>
+	ServerName staging2.crunchr.co
+	ServerAlias *.staging2.crunchr.co
+	DocumentRoot /home/staging2.crunchbutton/www
+	ServerAdmin webmaster@staging2._DOMAIN_
+	UseCanonicalName Off
+	ErrorLog /home/staging2.crunchbutton/logs/error_log
+	CustomLog /home/staging2.crunchbutton/logs/access_log combined
+</VirtualHost>
+
 
 #
 # one button wenzel specific stuff
