--- a/conf/crunchbutton.com.conf
+++ b/conf/crunchbutton.com.conf
@@ -2,6 +2,31 @@
 
 <VirtualHost *:80>
 	ServerName _DOMAIN_
+	DocumentRoot /home/_DOMAIN_/www
+	ServerAdmin webmaster@_DOMAIN_
+	UseCanonicalName Off
+	ErrorLog /home/_DOMAIN_/logs/error_log
+	CustomLog /home/_DOMAIN_/logs/access_log combined
+	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+
+	<IfModule mod_rewrite.c>
+		RewriteEngine On
+		RewriteCond %{HTTPS} off
+		RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+	</IfModule>
+</VirtualHost>
+
+<VirtualHost _IP_:80>
+	ServerName jobs._DOMAIN_
+	DocumentRoot /home/jobs.crunchbutton/www
+	ServerAdmin webmaster@jobs._DOMAIN_
+	UseCanonicalName Off
+	ErrorLog /home/jobs.crunchbutton/logs/error_log
+	CustomLog /home/jobs.crunchbutton/logs/access_log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+	ServerName www._DOMAIN_
 	ServerAlias *._DOMAIN_
 	DocumentRoot /home/_DOMAIN_/www
 	ServerAdmin webmaster@_DOMAIN_
