--- a/conf/crunchbutton.com.conf
+++ b/conf/crunchbutton.com.conf
@@ -8,7 +8,7 @@
 	UseCanonicalName Off
 	ErrorLog /home/_DOMAIN_/logs/error_log
 	CustomLog /home/_DOMAIN_/logs/access_log combined
-	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+	Header always set Strict-Transport-Security "max-age=63072000"
 
 	<IfModule mod_rewrite.c>
 		RewriteEngine On
@@ -25,7 +25,7 @@
 	UseCanonicalName Off
 	ErrorLog /home/_DOMAIN_/logs/error_log
 	CustomLog /home/_DOMAIN_/logs/access_log combined
-	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+	Header always set Strict-Transport-Security "max-age=63072000"
 
 	SSLEngine on
 	SSLCertificateFile /home/server/ssl/wild.sha-2._DOMAIN_.crt
