--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -19,7 +19,7 @@
 	UseCanonicalName Off
 	ErrorLog /home/crunchbutton/logs/error_log
 	CustomLog /home/crunchbutton/logs/access_log combined
-	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+	Header always set Strict-Transport-Security "max-age=63072000"
 
 	<IfModule mod_rewrite.c>
 		RewriteEngine On
@@ -35,7 +35,7 @@
 	UseCanonicalName Off
 	ErrorLog /home/crunchbutton/logs/error_log
 	CustomLog /home/crunchbutton/logs/access_log combined
-	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+	Header always set Strict-Transport-Security "max-age=63072000"
 
 	SSLEngine on
 	SSLCertificateFile /home/server/ssl/sha-2._DOMAIN_.crt
@@ -59,7 +59,7 @@
 	UseCanonicalName Off
 	ErrorLog /home/cockpit.crunchbutton/logs/error_log
 	CustomLog /home/cockpit.crunchbutton/logs/access_log combined
-	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+	Header always set Strict-Transport-Security "max-age=63072000"
 	
 	<IfModule mod_rewrite.c>
 		RewriteEngine On
@@ -76,7 +76,7 @@
 	UseCanonicalName Off
 	ErrorLog /home/cockpit.crunchbutton/logs/error_log
 	CustomLog /home/cockpit.crunchbutton/logs/access_log combined
-	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+	Header always set Strict-Transport-Security "max-age=63072000"
 
 	SSLEngine on
 	SSLCertificateFile /home/server/ssl/wild.sha-2._DOMAIN_.crt
@@ -97,7 +97,7 @@
 	UseCanonicalName Off
 	ErrorLog /home/i.crunchbutton/logs/error_log
 	CustomLog /home/i.crunchbutton/logs/access_log combined
-	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+	Header always set Strict-Transport-Security "max-age=63072000"
 
 	<IfModule mod_rewrite.c>
 		RewriteEngine On
@@ -113,7 +113,7 @@
 	UseCanonicalName Off
 	ErrorLog /home/i.crunchbutton/logs/error_log
 	CustomLog /home/i.crunchbutton/logs/access_log combined
-	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+	Header always set Strict-Transport-Security "max-age=63072000"
 
 	SSLEngine on
 	SSLCertificateFile /home/server/ssl/wild.sha-2._DOMAIN_.crt
@@ -303,7 +303,7 @@
 	UseCanonicalName Off
 	ErrorLog /home/crunchbutton/logs/error_log
 	CustomLog /home/crunchbutton/logs/access_log combined
-	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+	Header always set Strict-Transport-Security "max-age=63072000"
 
 	SSLEngine on
 	SSLCertificateFile /home/server/ssl/wild.sha-2._DOMAIN_.crt
@@ -324,7 +324,7 @@
 	UseCanonicalName Off
 	ErrorLog /home/crunchbutton/logs/error_log
 	CustomLog /home/crunchbutton/logs/access_log combined
-	Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+	Header always set Strict-Transport-Security "max-age=63072000"
 
 	SSLEngine on
 	SSLCertificateFile /home/server/ssl/sha-2._DOMAIN_.crt
