--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_script:
   - cat travis/sites.conf | sed -e "s,PATH,`pwd`/www,g" | sudo tee /etc/apache2/sites-available/default > /dev/null
   - echo 'export APACHE_ARGUMENTS="-D TRAVIS"' | sudo tee -a /etc/apache2/envvars > /dev/null
   - sudo service apache2 restart
+  - npm install assert chai phantom path util events
   
 #  - "export DISPLAY=:99.0"
 #  - "sh -e /etc/init.d/xvfb start"
@@ -34,8 +35,8 @@ before_script:
 
 
 script:
-#  - phantomjs travis/phantom.js
   - phpunit --configuration travis/phpunit.xml --coverage-text
+  - phantomjs travis/phantom/run.js
 
 #addons:
 #  sauce_connect:
