added cockpit staging

--- a/conf/cockpit.conf
+++ b/conf/cockpit.conf
@@ -30,6 +30,22 @@
 	#</IfModule>
 </VirtualHost>
 
+<VirtualHost _IP_:80>
+	ServerName staging.cockpit.la
+	DocumentRoot /home/staging.cockpit.la/www
+	ServerAdmin webmaster@staging.cockpit.la
+	UseCanonicalName Off
+	ErrorLog /home/staging.cockpit.la/logs/error_log
+	CustomLog /home/staging.cockpit.la/logs/access_log combined
+	#Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+
+	#<IfModule mod_rewrite.c>
+		#RewriteEngine On
+		#RewriteCond %{HTTPS} off
+		#RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+	#</IfModule>
+</VirtualHost>
+
 
 <VirtualHost _IP_:443 [2600:3c01::f03c:91ff:fe6e:edd3]:443>
 	ServerName cockpit.la
