update to Jasmin 2.2
- updated jasmine library
- created a new console reporter based on old one
- updated page tests
- moved page rendering into run.js
- fixed ssl errors with external libraries

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_script:
 
 script:
   - phpunit --configuration travis/phpunit.xml --coverage-text
-  - phantomjs travis/phantom/run.js
+  - phantomjs --web-security=false --ignore-ssl-errors=yes --ssl-protocol=tlsv1 travis/phantom/run.js
   
 notifications:
   webhooks: https://cockpit.la/api/travisci/build
